# agent-codemap

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  README_zh.md
npm/agent-codemap/: install.js  package.json
npm/agent-codemap-darwin-arm64/: package.json
npm/agent-codemap-darwin-x64/: package.json
npm/agent-codemap-linux-x64/: package.json
npm/agent-codemap-win32-x64/: package.json
scripts/: README.md  build-npm.sh  publish-npm.sh
src/: cli.rs  detector.rs  extractor.rs  main.rs  scanner.rs  symbol.rs  watch.rs
src/output/: json.rs  markdown.rs  mod.rs
src/queries/: c.scm  cpp.scm  csharp.scm  go.scm  java.scm  javascript.scm  kotlin.scm  markdown.scm  objc.scm  python.scm  ruby.scm  rust.scm  swift.scm  typescript.scm
tests/: integration_test.rs
tests/expected/: c.md  cpp.md  csharp.md  go.md  java.md  javascript.md  kotlin.md  markdown.md  objc.md  python.md  ruby.md  rust.md  swift.md  typescript.md
tests/fixtures/c/: basic.c
tests/fixtures/cpp/: basic.cpp
tests/fixtures/csharp/: basic.cs
tests/fixtures/go/: basic.go
tests/fixtures/java/: Basic.java
tests/fixtures/javascript/: basic.js
tests/fixtures/kotlin/: basic.kt
tests/fixtures/markdown/: basic.md
tests/fixtures/objc/: basic.m
tests/fixtures/python/: basic.py
tests/fixtures/ruby/: basic.rb
tests/fixtures/rust/: basic.rs
tests/fixtures/swift/: basic.swift
tests/fixtures/typescript/: basic.ts
